--- a/html/index.html
+++ b/html/index.html
@@ -1,11 +1,23 @@
-<script>
-  fetch("http://host.docker.internal:5000/api/message")
-    .then(r => r.json())
-    .then(d => {
-      document.getElementById("msg").innerText = d.message;
-    })
-    .catch(() => {
-      document.getElementById("msg").innerText = "Errore nel chiamare il backend";
-    });
-</script>
+<!DOCTYPE html>
+<html lang="it">
+<head>
+  <meta charset="UTF-8">
+  <title>Frontend Demo</title>
+</head>
+<body>
+  <h1>Frontend</h1>
+  <p id="msg">Caricamento...</p>
+
+  <script>
+    fetch("/api/message")  <!-- chiama il backend stesso -->
+      .then(r => r.json())
+      .then(d => {
+        document.getElementById("msg").innerText = d.message;
+      })
+      .catch(() => {
+        document.getElementById("msg").innerText = "Errore nel chiamare il backend";
+      });
+  </script>
+</body>
+</html>
 
